--- a/examples/triceDemo_NUCLEO-F070RB_LL_MDK-ARM/triceDemo_NUCLEO-F070RB_LL_MDK-ARM.ioc
+++ b/examples/triceDemo_NUCLEO-F070RB_LL_MDK-ARM/triceDemo_NUCLEO-F070RB_LL_MDK-ARM.ioc
@@ -24,8 +24,8 @@ Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F070RBTx
-MxCube.Version=5.5.0
-MxDb.Version=DB.5.0.50
+MxCube.Version=5.6.1
+MxDb.Version=DB.5.0.60
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -71,14 +71,6 @@ PC15-OSC32_OUT.GPIO_Label=RCC_OSC32_OUT
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PCC.Checker=false
-PCC.Line=STM32F0x0 Value Line
-PCC.MCU=STM32F070RBTx
-PCC.PartNumber=STM32F070RBTx
-PCC.Seq0=0
-PCC.Series=STM32F0
-PCC.Temperature=25
-PCC.Vdd=3.6
 PF0-OSC_IN.GPIOParameters=GPIO_Label
 PF0-OSC_IN.GPIO_Label=RCC_OSC_IN
 PF0-OSC_IN.Locked=true
@@ -94,8 +86,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
+ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\CubeMX\\STM32Cube_FW_F0_V1.11.0
+ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F070RBTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.0
