st libs as link

--- a/examples/triceDemo_NUCLEO-F030RB_LL_IAR_EWARM/triceDemo_NUCLEO-F030RB_LL_IAR_EWARM.ioc
+++ b/examples/triceDemo_NUCLEO-F030RB_LL_IAR_EWARM/triceDemo_NUCLEO-F030RB_LL_IAR_EWARM.ioc
@@ -88,8 +88,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
+ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\CubeMX\\STM32Cube_FW_F0_V1.11.0
+ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F030R8Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.0
@@ -98,7 +98,7 @@ ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
-ProjectManager.LibraryCopy=1
+ProjectManager.LibraryCopy=2
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
