--- a/test/STM32CubeIDE_HAL_UART_NUCLEO-F070RB/STM32CubeIDE_HAL_UART_NUCLEO-F070RB.ioc
+++ b/test/STM32CubeIDE_HAL_UART_NUCLEO-F070RB/STM32CubeIDE_HAL_UART_NUCLEO-F070RB.ioc
@@ -32,7 +32,6 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -86,8 +85,8 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
-ProjectManager.DefaultFWLocation=true
+ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\CubeMX\\STM32Cube_FW_F0_V1.11.0
+ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F070RBTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.0
@@ -101,13 +100,13 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=triceDemo_NUCLEO-F070RB_LL_STM32CubeIDE.ioc
-ProjectManager.ProjectName=triceDemo_NUCLEO-F070RB_LL_STM32CubeIDE
+ProjectManager.ProjectFileName=STM32CubeIDE_HAL_UART_NUCLEO-F070RB.ioc
+ProjectManager.ProjectName=STM32CubeIDE_HAL_UART_NUCLEO-F070RB
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_USART2_UART_Init-USART2-false-LL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
