--- a/test/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.ioc
+++ b/test/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.ioc
@@ -24,8 +24,8 @@ Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030R8Tx
-MxCube.Version=5.6.1
-MxDb.Version=DB.5.0.60
+MxCube.Version=6.0.1
+MxDb.Version=DB.6.0.0
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -88,7 +88,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\CubeMX\\STM32Cube_FW_F0_V1.11.0
+ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\STM32Cube_FW_F0_V1.11.0
 ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F030R8Tx
@@ -99,12 +99,13 @@ ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=2
-ProjectManager.MainLocation=Src
+ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.ioc
 ProjectManager.ProjectName=MDK-ARM_LL_UART_BARE_NUCLEO-F030R8
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
