--- a/test/MDK-ARM_LL_UART_BARE_NUCLEO-F070RB/MDK-ARM_LL_UART_BARE_NUCLEO-F070RB.ioc
+++ b/test/MDK-ARM_LL_UART_BARE_NUCLEO-F070RB/MDK-ARM_LL_UART_BARE_NUCLEO-F070RB.ioc
@@ -86,7 +86,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\STM32Cube_FW_F0_V1.11.0
+ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\CubeMX\\STM32Cube_FW_F0_V1.11.0
 ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F070RBTx
