--- a/test/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.ioc
+++ b/test/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8/MDK-ARM_LL_UART_BARE_NUCLEO-F030R8.ioc
@@ -88,7 +88,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\STM32Cube_FW_F0_V1.11.0
+ProjectManager.CustomerFirmwarePackage=..\\..\\..\\..\\ST\\CubeMX\\STM32Cube_FW_F0_V1.11.0
 ProjectManager.DefaultFWLocation=false
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F030R8Tx
