--- a/test/MDK-ARM_LL_UART_NUCLEO-F070RB/MDK-ARM_LL_UART_NUCLEO-F070RB.ioc
+++ b/test/MDK-ARM_LL_UART_NUCLEO-F070RB/MDK-ARM_LL_UART_NUCLEO-F070RB.ioc
@@ -24,8 +24,8 @@ Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F070RBTx
-MxCube.Version=5.6.1
-MxDb.Version=DB.5.0.60
+MxCube.Version=6.0.1
+MxDb.Version=DB.6.0.0
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -103,6 +103,7 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=MDK-ARM_LL_UART_NUCLEO-F070RB.ioc
 ProjectManager.ProjectName=MDK-ARM_LL_UART_NUCLEO-F070RB
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
 ProjectManager.ToolChainLocation=
