wrap & wrapl work with the same code

--- a/test/Backup/MDK-ARM_LL_UART_RTT0_BARE_STM32F091_NUCLEO-64/MDK-ARM_LL_UART_RTT0_BARE_STM32F091_NUCLEO-64.ioc
+++ b/test/Backup/MDK-ARM_LL_UART_RTT0_BARE_STM32F091_NUCLEO-64/MDK-ARM_LL_UART_RTT0_BARE_STM32F091_NUCLEO-64.ioc
@@ -7,12 +7,12 @@ Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=USART2
 Mcu.IPNb=4
-Mcu.Name=STM32F030R8Tx
+Mcu.Name=STM32F091R(B-C)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin1=PC14OSC32_IN
 Mcu.Pin10=VP_SYS_VS_Systick
-Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin2=PC15OSC32_OUT
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PA2
@@ -23,8 +23,8 @@ Mcu.Pin9=PA14
 Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32F030R8Tx
-MxCube.Version=6.1.0
+Mcu.UserName=STM32F091RCTx
+MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -71,12 +71,12 @@ PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.Locked=true
 PC13.Signal=GPXTI13
-PC14-OSC32_IN.Locked=true
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
-PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
-PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC14OSC32_IN.Locked=true
+PC14OSC32_IN.Mode=LSE-External-Oscillator
+PC14OSC32_IN.Signal=RCC_OSC32_IN
+PC15OSC32_OUT.Locked=true
+PC15OSC32_OUT.Mode=LSE-External-Oscillator
+PC15OSC32_OUT.Signal=RCC_OSC32_OUT
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Clock-Source
 PF0-OSC_IN.Signal=RCC_OSC_IN
@@ -91,7 +91,7 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F030R8Tx
+ProjectManager.DeviceId=STM32F091RCTx
 ProjectManager.FirmwarePackage=STM32Cube FW_F0 V1.11.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
@@ -103,8 +103,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=MDK-ARM_LL_UART_RTT0_BAREL_STM32F030R8-NUCLEO-64.ioc
-ProjectManager.ProjectName=MDK-ARM_LL_UART_RTT0_BAREL_STM32F030R8-NUCLEO-64
+ProjectManager.ProjectFileName=MDK-ARM_LL_UART_RTT0_BARE_STM32F091_NUCLEO-64.ioc
+ProjectManager.ProjectName=MDK-ARM_LL_UART_RTT0_BARE_STM32F091_NUCLEO-64
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.27
@@ -114,24 +114,32 @@ ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
+RCC.CECFreq_Value=32786.88524590164
 RCC.FCLKCortexFreq_Value=48000000
+RCC.FLatency-AdvancedSettings=FLASH_LATENCY_1
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value
+RCC.HSICECFreq_Value=32786.88524590164
+RCC.I2SFreq_Value=48000000
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLDivider,PLLMCOFreq_Value,PLLMUL,PREFETCH_ENABLE-AdvancedSettings,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value
 RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=48000000
-RCC.PLLMCOFreq_Value=24000000
+RCC.PLLDivider=RCC_PREDIV_DIV2
+RCC.PLLMCOFreq_Value=48000000
 RCC.PLLMUL=RCC_PLL_MUL12
+RCC.PREFETCH_ENABLE-AdvancedSettings=1
 RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
+RCC.USART2Freq_Value=48000000
+RCC.USART3Freq_Value=48000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-USART2.BaudRate=115200
-USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART2.IPParameters=VirtualMode,VirtualMode-Asynchronous
+USART2.VirtualMode=VM_ASYNC
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-board=NUCLEO-F030R8
+board=NUCLEO-F091RC
 boardIOC=true
