--- a/test/MDK-ARM_STM32G031K8/MDK-ARM_STM32G031K8.ioc
+++ b/test/MDK-ARM_STM32G031K8/MDK-ARM_STM32G031K8.ioc
@@ -96,35 +96,34 @@ ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_USART2_UART_Init-USART2-false-LL-true
-RCC.ADCFreq_Value=64000000
-RCC.AHBFreq_Value=64000000
-RCC.APBFreq_Value=64000000
-RCC.APBTimFreq_Value=64000000
-RCC.CortexFreq_Value=64000000
+RCC.ADCFreq_Value=16000000
+RCC.AHBFreq_Value=16000000
+RCC.APBFreq_Value=16000000
+RCC.APBTimFreq_Value=16000000
+RCC.CortexFreq_Value=16000000
 RCC.EXTERNAL_CLOCK_VALUE=12288000
-RCC.FCLKCortexFreq_Value=64000000
+RCC.FCLKCortexFreq_Value=16000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=64000000
+RCC.HCLKFreq_Value=16000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=64000000
-RCC.I2S1Freq_Value=64000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIM15Freq_Value,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
-RCC.LPTIM1Freq_Value=64000000
-RCC.LPTIM2Freq_Value=64000000
-RCC.LPUART1Freq_Value=64000000
+RCC.I2C1Freq_Value=16000000
+RCC.I2S1Freq_Value=16000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APBFreq_Value,APBTimFreq_Value,CortexFreq_Value,EXTERNAL_CLOCK_VALUE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2S1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWRFreq_Value,SYSCLKFreq_VALUE,TIM15Freq_Value,TIM1Freq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value
+RCC.LPTIM1Freq_Value=16000000
+RCC.LPTIM2Freq_Value=16000000
+RCC.LPUART1Freq_Value=16000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=64000000
+RCC.MCO1PinFreq_Value=16000000
 RCC.PLLPoutputFreq_Value=64000000
 RCC.PLLQoutputFreq_Value=64000000
 RCC.PLLRCLKFreq_Value=64000000
-RCC.PWRFreq_Value=64000000
-RCC.SYSCLKFreq_VALUE=64000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.PWRFreq_Value=16000000
+RCC.SYSCLKFreq_VALUE=16000000
 RCC.TIM15Freq_Value=16000000
-RCC.TIM1Freq_Value=64000000
-RCC.USART1Freq_Value=64000000
+RCC.TIM1Freq_Value=16000000
+RCC.USART1Freq_Value=16000000
 RCC.USART2Freq_Value=16000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
