RS485 works first time

--- a/test/MDK-ARM_STM32G031K8/MDK-ARM_STM32G031K8.ioc
+++ b/test/MDK-ARM_STM32G031K8/MDK-ARM_STM32G031K8.ioc
@@ -1,36 +1,46 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
 KeepUserPlacement=false
+Mcu.CPN=STM32G031K8T6
 Mcu.Family=STM32G0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=USART1
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32G031K(4-6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PC14-OSC32_IN (PC14)
 Mcu.Pin1=PC15-OSC32_OUT (PC15)
+Mcu.Pin10=PA14-BOOT0
+Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin2=PF2 - NRST
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
-Mcu.Pin5=PC6
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14-BOOT0
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin5=PA9
+Mcu.Pin6=PC6
+Mcu.Pin7=PA10
+Mcu.Pin8=PA12 [PA10]
+Mcu.Pin9=PA13
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G031K8Tx
-MxCube.Version=6.3.0
-MxDb.Version=DB.6.0.30
+MxCube.Version=6.6.1
+MxDb.Version=DB.6.0.60
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
+PA12\ [PA10].Mode=Hardware Flow Control (RS485)
+PA12\ [PA10].Signal=USART1_DE
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=T_JTMS
 PA13.Locked=true
@@ -53,6 +63,8 @@ PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
@@ -77,12 +89,12 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32G031K8Tx
-ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.5.0
+ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -95,7 +107,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_USART2_UART_Init-USART2-false-LL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_USART2_UART_Init-USART2-false-LL-true,4-MX_USART1_UART_Init-USART1-false-LL-true
 RCC.ADCFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
 RCC.APBFreq_Value=64000000
@@ -130,6 +142,10 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode-Asynchronous,VirtualMode-Hardware Flow Control (RS485),BaudRate
+USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART1.VirtualMode-Hardware\ Flow\ Control\ (RS485)=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
