--- a/test/MDK-ARM_STM32F030R8/MDK-ARM_STM32F030R8.ioc
+++ b/test/MDK-ARM_STM32F030R8/MDK-ARM_STM32F030R8.ioc
@@ -102,7 +102,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -133,7 +133,7 @@ RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-USART2.BaudRate=921600
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
