--- a/examples/vsCode_NucleoF030R8_instrumented/vsCode_NucleoF030R8_instrumented.ioc
+++ b/examples/vsCode_NucleoF030R8_instrumented/vsCode_NucleoF030R8_instrumented.ioc
@@ -135,7 +135,7 @@ RCC.TimSysFreq_Value=32000000
 RCC.USART1Freq_Value=32000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-USART2.BaudRate=1000000
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode-Asynchronous,BaudRate,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART2.WordLength=WORDLENGTH_9B
