--- a/examples/vsCode_Nucleo-L432KC_instrumented/L432KC.ioc
+++ b/examples/vsCode_Nucleo-L432KC_instrumented/L432KC.ioc
@@ -31,8 +31,8 @@ Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L432KCUx
-MxCube.Version=6.8.1
-MxDb.Version=DB.6.0.81
+MxCube.Version=6.11.1
+MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -49,6 +49,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.TIM1_UP_TIM16_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_TIM16_IRQn
 NVIC.TimeBaseIP=TIM16
+NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=MCO [High speed clock in]
@@ -95,7 +96,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L432KCUx
-ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.17.2
+ProjectManager.FirmwarePackage=STM32Cube FW_L4 V1.18.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -113,6 +114,8 @@ ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
+ProjectManager.UAScriptAfterPath=
+ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_USART2_UART_Init-USART2-false-LL-true
 RCC.48CLKFreq_Value=24000000
@@ -169,8 +172,9 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.WatchDogFreq_Value=32000
-USART2.IPParameters=VirtualMode-Asynchronous
+USART2.IPParameters=VirtualMode-Asynchronous,WordLength
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART2.WordLength=WORDLENGTH_9B
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_tim16.Mode=TIM16
