--- a/examples/F030_bare/vsCode_NucleoF030R8_generated.ioc
+++ b/examples/F030_bare/vsCode_NucleoF030R8_generated.ioc
@@ -107,8 +107,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=vsCode_NucleoF030R8_generated.ioc
-ProjectManager.ProjectName=vsCode_NucleoF030R8_generated
+ProjectManager.ProjectFileName=F030_bare.ioc
+ProjectManager.ProjectName=F030_bare
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
