--- a/examples/F030_bare/Nucleo-F030R8.ioc
+++ b/examples/F030_bare/Nucleo-F030R8.ioc
@@ -107,8 +107,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=vsCode_NucleoF030R8_instrumented.ioc
-ProjectManager.ProjectName=vsCode_NucleoF030R8_instrumented
+ProjectManager.ProjectFileName=Nucleo-F030R8.ioc
+ProjectManager.ProjectName=F030_bare
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
