--- a/examples/F030_inst/Nucleo-F030R8.ioc
+++ b/examples/F030_inst/Nucleo-F030R8.ioc
@@ -101,14 +101,14 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=F030_bare.ioc
-ProjectManager.ProjectName=F030_bare
+ProjectManager.ProjectFileName=Nucleo-F030R8.ioc
+ProjectManager.ProjectName=F030_inst
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
